[fix][dingo-calcite] Modified the acquisition and utilization of statistical information